# fast_jwt_auth

./: crud_user.py  item_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_11_13_2340-7c09548287bc_create_table.py  2024_11_14_1743-0b40f4b12e09_create_users_table.py  2024_11_14_2036-60ac21ac2333_create_posts_table.py  2024_11_14_2158-7c282dcc35f8_create_profile_table.py  2024_11_17_0747-784372fc9515_create_order_table.py  2024_11_17_0825-95a5958131e2_create_order_product_table.py  2024_11_18_2256-14f9991e503b_create_add_count_to_table_order_product_.py  2024_11_28_1959-589485298bb6_create_unit_price.py
api_v1/: __init__.py
api_v1/demo_auth/: demo_jwt_auth.py  fake_db.py  helpers.py  validation.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: README.md  utils.py
core/: config.py
core/models/: __init__.py  db_manager.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: schemas.py
