[tool.poetry]
name = "truetestfastapi"
version = "0.1.0"
description = ""
authors = ["al.larin <al.larin1308@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}
black = "^24.10.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
